# KartholOS-Linux

./: .gitignore  README.md
.github/workflows/: build-kartholos.yml
meta-kartholos/conf/: layer.conf
meta-kartholos/recipes-core/base-files/: base-files_%.bbappend
meta-kartholos/recipes-core/base-files/base-files/: issue
meta-kartholos/recipes-core/images/: kartholos-image-minimal.bb  kartholos-image-qt6.bb
meta-kartholos/recipes-core/os-release/: os-release.bbappend
meta-kartholos/recipes-graphics/kartholos-shell/: kartholos-shell.bb
meta-kartholos/recipes-graphics/kartholos-shell/files/: main.cpp
meta-kartholos/recipes-graphics/weston/: weston.ini  weston_%.bbappend
src/kartholos-shell/: CMakeLists.txt  main.qml
